crates/runtime/tests/search/snapshots/integration_models__search__duckdb-no_vector_engine-no_text_engine-view_union_all_join-text_search_megascience_vector_search_sql_no_score_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, answer FROM vector_search(qs, 'second', answer) order by _score desc, id LIMIT 4"
---
Could not prepare EXPLAIN plan: Query execution failed: code: 'The service is currently unavailable', message: "tcp connect error", source: tonic::transport::Error(Transport, ConnectError(ConnectError("tcp connect error", 127.0.0.1:56978, Os { code: 61, kind: ConnectionRefused, message: "Connection refused" })))
