crates/runtime/tests/search/snapshots/integration_models__search__duckdb-no_vector_engine-no_text_engine-view_union_all_join-text_search_megascience_vector_search_sql_random.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT subject FROM vector_search(qs, 'second', answer) order by _score desc LIMIT 4"
---
"Request error: error sending request for url (http://127.0.0.1:56977/v1/sql)"
