crates/runtime/tests/search/snapshots/integration_models__search__duckdb-no_vector_engine-no_text_engine-view_union_all_join-text_search_megascience_with_where_response.snap
---
source: crates/runtime/tests/search/mod.rs
expression: normalize_search_response(resp)
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": "7.52",
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "Relative or \"stress\" polycythaemia, which is secondary to a depletion in the plasma volume."
        ]
      },
      "primary_key": {
        "id": 890
      }
    }
  ]
}
