crates/runtime/tests/search/snapshots/integration_models__search__duckdb-no_vector_engine-view_union_all_join-basic_megascience_vector_search_sql_random.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT subject FROM vector_search(qs, 'second', answer) order by _score desc LIMIT 4"
---
"HTTP error: 400 Bad Request - Arrow error: Invalid argument error: column types must match schema types, expected FixedSizeList(64 x Float32) but found FixedSizeList(64 x Float32, field: '') at column index 1"
